@@ -1,3 +1,9 @@
+2003-06-08  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/Config.pm:  (parse_taboo_body, parse_taboo_headers)
+	Bugfix:  Skip lines that have no pattern.
+	Thanks to Roger Klorese.
+
 2003-06-06  Michael Yount <csf@moscow.com>
 
 	* lib/Mj/Config.pm:  (parse_bounce_rules)  Bugfix:  Add
